# dictofun

./: .gitignore  .gitmodules  LICENSE  README.md  TODO.md
firmware/: BUILD.md  CMakeLists.txt  Dockerfile  gcc-arm-none-eabi.cmake  gcc_arm_none_eabi_10.cmake
firmware/ci/: Dockerfile  README.md  build_dictofun.sh  build_unit_tests.sh  setup_rpi_ci.sh
firmware/cmake/: arm-none-eabi.cmake  dictofun.cmake  freertos.cmake  littlefs.cmake  nrf5.cmake  nrf5_app.cmake  nrf5_ble.cmake  nrf5_ble_srv.cmake  nrf5_common.cmake  nrf5_external_libs.cmake  nrf5_helpers.cmake  nrf5_misc.cmake  nrf5_nrfx.cmake
firmware/gdb/: gdb_startup_commands.txt
firmware/release/: package_image.sh
firmware/sdk/: download_nordic_sdk.sh  makefile_posix.patch  nrf_cts_c_reduce_log.patch  nrf_gq_reduce_logs.patch  nrf_sdh_pause_resume_c.patch  nrf_sdh_pause_resume_h.patch  sdh_stack_size_increase.patch
firmware/sdk/nRF5_SDK_17.0.2_d674dde/components/boards/: boards.c  boards.h
firmware/src/: .clang-format  CMakeLists.txt  README.md  ble_file_transfer_service.c  drv_audio.c  main.c  spi_access.h
firmware/src/dictofun_1.0/s132/config/: dictofun_1_0.h  sdk_config.h
firmware/src/dictofun_1.0/s132/ses/: dictofun_1.0_s132.emProject
firmware/src/lib/: CMakeLists.txt
firmware/src/lib/adc/: CMakeLists.txt  adc.cpp  adc.h
firmware/src/lib/adc/interface/: adc_if.h
firmware/src/lib/audio/: CMakeLists.txt
firmware/src/lib/audio/codec/: CMakeLists.txt  codec.h
firmware/src/lib/audio/codec/src/: codec_decimate.h  codec_decimate.hpp
firmware/src/lib/audio/codec/test/: test_codec.cpp
firmware/src/lib/audio/microphone/: CMakeLists.txt  microphone.h
firmware/src/lib/audio/microphone/mock/: microphone_mock.cpp  microphone_mock.h
firmware/src/lib/audio/microphone/src/: microphone_pdm.h  microphone_pdm.hpp
firmware/src/lib/audio/microphone/test/: test_microphone.cpp
firmware/src/lib/battery/: CMakeLists.txt  battery.cpp  battery.h
firmware/src/lib/ble_fts/: CMakeLists.txt  README.md  ble_file_transfer_service.c  ble_file_transfer_service.h  ble_fts.cpp  ble_fts.h  ble_fts_fsm.cpp  ble_fts_fsm.h
firmware/src/lib/common/: CMakeLists.txt  result.h  test_runner.h
firmware/src/lib/drv_pdm/: CMakeLists.txt  drv_audio.c  drv_audio.h
firmware/src/lib/dummy_module/: CMakeLists.txt  useless_class.cpp  useless_class.h
firmware/src/lib/dummy_module/test/: dummy_test.cpp
firmware/src/lib/i2c/: CMakeLists.txt  nrf_i2c.cpp  nrf_i2c.h
firmware/src/lib/i2c/interface/: i2c_if.h
firmware/src/lib/littlefs_integration/: CMakeLists.txt  README.md  block_api.cpp  block_api.h
firmware/src/lib/littlefs_integration/test/: CMakeLists.txt  spi_flash_simulation.cpp  spi_flash_simulation_api.h  test_littlefs.cpp
firmware/src/lib/myfs/: CMakeLists.txt  block_api_myfs.cpp  block_api_myfs.h  myfs.cpp  myfs.h
firmware/src/lib/myfs/test/: test_myfs.cpp
firmware/src/lib/noinitmem/: CMakeLists.txt  noinit_mem.cpp  noinit_mem.h
firmware/src/lib/rtc/rv4162/: CMakeLists.txt  rv4162.cpp  rv4162.h
firmware/src/lib/rtc/time/: CMakeLists.txt  time.h
firmware/src/lib/simple_fs/: CMakeLists.txt  Makefile  mock_spi_flash.cpp  simple_fs.cpp  simple_fs.h  test_simple_fs.cpp
firmware/src/lib/spi_flash/: CMakeLists.txt  block_device_api.cpp  block_device_api.h  spi.cpp  spi.h  spi_access.c  spi_access.h  spi_flash.cpp  spi_flash.h
firmware/src/lib/spi_flash/interface/: CMakeLists.txt  spi_flash_if.h
firmware/src/pca10056/s140/config/: sdk_config.h
firmware/src/pca10056/s140/ses/: dictofun_pca10056_s140.emProject
firmware/src/targets/: CMakeLists.txt
firmware/src/targets/boards/: CMakeLists.txt  boards.c  boards.h  dictofun_1_1.h  dictofun_1_3.h  dictofun_1_4.h  pca10040_dictofun.h
firmware/src/targets/bootloader/: README.md  dfu_public_key.c  main.c
firmware/src/targets/bootloader/pca10040_s132_ble_debug/armgcc/: Makefile
firmware/src/targets/bootloader/pca10040_s132_ble_debug/config/: sdk_config.h
firmware/src/targets/bootloader/pca10040_s132_ble_debug/ses/: flash_placement.xml  secure_bootloader_ble_s132_pca10040_debug.emProject
firmware/src/targets/bootloader/pca10056_s140_ble_debug/armgcc/: Makefile  secure_bootloader_gcc_nrf52.ld
firmware/src/targets/bootloader/pca10056_s140_ble_debug/config/: sdk_config.h
firmware/src/targets/bootloader/pca10056_s140_ble_debug/ses/: secure_bootloader_ble_s132_pca10040_debug.emProject
firmware/src/targets/dictofun/: BleServices.cpp  BleServices.h  BleSystem.cpp  BleSystem.h  CMakeLists.txt  app_error_handler.cpp  dictofun_linkerscript.ld  dictofun_s132.emProject  freertos_memory_allocation.c  freertos_wrappers.hpp  main.cpp
firmware/src/targets/dictofun/application/: BleServices.cpp  BleServices.h  BleSystem.cpp  BleSystem.h  CMakeLists.txt  assert.c
firmware/src/targets/dictofun/application/audio/: CMakeLists.txt  audio_processor.h  audio_processor.hpp
firmware/src/targets/dictofun/config/: CMakeLists.txt  FreeRTOSConfig.h  dictofun_1_1.h  sdk_config.h
firmware/src/targets/dictofun/tasks/: CMakeLists.txt  README.md  battery_measurement.cpp  battery_measurement.h  task_audio.cpp  task_audio.h  task_cli_logger.cpp  task_led.cpp  task_led.h  task_memory.cpp  task_memory.h  task_state.cpp  task_state.h  tasks_architecture.drawio
firmware/src/targets/dictofun/tasks/audio/: CMakeLists.txt  task_audio.cpp  task_audio.h
firmware/src/targets/dictofun/tasks/audio_tester/: CMakeLists.txt  task_audio_tester.cpp  task_audio_tester.h
firmware/src/targets/dictofun/v1.0/: BleServices.cpp  BleServices.h  BleSystem.cpp  BleSystem.h  application.c  dictofun_1.0_s132.emProject  main.cpp
firmware/src/targets/dictofun/version/: CMakeLists.txt  version.h  version.py
firmware/src/targets/pca10040/: BleServices.cpp  BleServices.h  BleSystem.cpp  BleSystem.h  application.c  ble_app_blinky_pca10040_s132.emProject  flash_placement.xml  main.cpp  sdk_config.h
firmware/test/: README.md  adpcm.py  ble_tests.py  convert_raw_to_wav.py  dictofun_ble.py  dictofun_control.py  dictofun_tests.py  fts.py  fts_tests.py  launch_tests.sh  manual_fts_tests.py
(+236 files in other folders)
