add_subdirectory(common)
add_subdirectory(spi_flash)
add_subdirectory(dummy_module)
add_subdirectory(audio)
add_subdirectory(third_party)
add_subdirectory(littlefs_integration)
add_subdirectory(ble_fts)
add_subdirectory(i2c)
add_subdirectory(rtc/rv4162)
add_subdirectory(rtc/time)
add_subdirectory(adc)
add_subdirectory(battery)